# word2vec

./: CMakeLists.txt  Dictionary.cc  Dictionary.h  StringUtil.cc  StringUtil.h  args.cc  args.h  logging.cc  logging.h  main.cc  matrix.cc  matrix.h  model.cc  model.h  real.h  utils.cc  utils.h  vector.cc  vector.h
